  . Fixed bug #64641 (imagefilledpolygon doesn't draw horizontal line). (cmb)

- Mbstring:
  . Fixed bug #72405 (mb_ereg_replace - mbc_to_code (oniguruma) -
    oob read access). (Laruence)
  . Fixed bug #72399 (Use-After-Free in MBString (search_re)). (Laruence)

- PCRE:
  . Fixed bug #72476 (Memleak in jit_stack). (Laruence)
  . Fixed bug #72463 (mail fails with invalid argument). (Anatol)

- Standard:
  . Fixed bug #72505 (readfile() mangles files larger than 2G). (Cschneid)
  . Fixed bug #72306 (Heap overflow through proc_open and $env parameter).
    (Laruence)

- Session:
  . Fixed bug #72531 (ps_files_cleanup_dir Buffer overflow). (Laruence)

- Streams:
  . Fixed bug #72439 (Stream socket with remote address leads to a segmentation
    fault). (Laruence)

23 Jun 2016 PHP 7.0.8

- Core:
  . Fixed bug #72218 (If host name cannot be resolved then PHP 7 crashes). 
    (Esminis at esminis dot lt)
  . Fixed bug #72221 (segfault, past-the-end access). (Lauri Kenttä)
  . Fixed bug #72268 (Integer Overflow in nl2br()). (Stas)
  . Fixed bug #72275 (Integer Overflow in json_encode()/json_decode()/
    json_utf8_to_utf16()). (Stas)
  . Fixed bug #72400 (Integer Overflow in addcslashes/addslashes). (Stas)
  . Fixed bug #72403 (Integer Overflow in Length of String-typed ZVAL). (Stas)

- FPM:
  . Fixed bug #72308 (fastcgi_finish_request and logging environment
    variables). (Laruence)

- GD:
  . Fixed bug #66387 (Stack overflow with imagefilltoborder). (CVE-2015-8874)
    (cmb)
  . Fixed bug #72298 (pass2_no_dither out-of-bounds access). (Stas)
  . Fixed bug #72337 (invalid dimensions can lead to crash). (Pierre)
  . Fixed bug #72339 (Integer Overflow in _gd2GetHeader() resulting in heap 
    overflow). (CVE-2016-5766) (Pierre)
  . Fixed bug #72407 (NULL Pointer Dereference at _gdScaleVert). (Stas)
  . Fixed bug #72446 (Integer Overflow in gdImagePaletteToTrueColor() resulting
    in heap overflow). (CVE-2016-5767) (Pierre)

- Intl: