@@ -616,6 +616,11 @@ PHP_FUNCTION(readline_callback_handler_remove)
    Ask readline to redraw the display */
 PHP_FUNCTION(readline_redisplay)
 {
+#if HAVE_LIBEDIT
+	/* seems libedit doesn't take care of rl_initialize in rl_redisplay
+	 * see bug #72538 */
+	using_history();
+#endif
 	rl_redisplay();
 }
 /* }}} */
